# lambda-calculus-parser

./: .clangd  CMakeLists.txt  README.md  default.nix  flake.nix  result
.github/workflows/: nix-build.yml
src/: CMakeLists.txt  main.cc
